k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: joke-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
