k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - joke-backend.beta-api-dev.com
    secretName: joke-backend-beta-api-dev-com-tls
  rules:
  - host: "joke-backend.beta-api-dev.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service
            port:
              number: 80
